--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -106,7 +106,7 @@
     height: 403px;
 }
 
-#wrapper {
+#wrapper-contact {
     margin-top: 2%;
     background-size: cover;
 
@@ -162,6 +162,37 @@
                 bottom: 1px;
             }
         }
+    }
+}
+
+#footer-top-contact {
+    border: 1px solid #EDEDED;
+    background-color: white;
+    padding-top: 6%;
+    padding-bottom: 6%;
+
+    .service-item {
+        text-align: center;
+
+        img {
+            display: block;
+            margin: auto;
+            padding-bottom: 20px;
+        }
+
+        .title {
+            color: #000;
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 700;
+        }
+
+        p {
+            margin-top: 1%;
+            font-size: 14px;
+            color: #4b5955;
+        }
+
     }
 }
 
