--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -147,9 +147,9 @@
 
 .login-register-responsive {
     position: absolute;
-    right: 16%;
+    right: 9%;
     top: 16%;
-    width: 138px;
+    width: 146px;
     height: 31px;
     border: 1px solid #eaeaea;
     background: #fff;
@@ -157,7 +157,7 @@
 
     ul {
         padding: 0px;
-        margin-left: 34px;
+        margin-left: 13px;
         margin-top: 2px;
         display: flex;
         gap: 7px;
@@ -428,6 +428,7 @@
     }
 
     .hamburger {
+        margin-left: 12px;
         position: relative;
     }
 
@@ -436,7 +437,7 @@
         gap: 3px;
         float: right;
         position: relative;
-        left: 10px;
+        right: 3px;
 
         i {
             cursor: pointer;
