--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -1,6 +1,7 @@
-#wrapper {
+#wrapper-shop {
     margin-top: 2%;
     background-size: cover;
+
     .page_text {
         display: flex;
         justify-content: center;
@@ -8,7 +9,7 @@
         flex-direction: column;
         height: 300px;
         width: 406px;
-    text-align: center;
+        text-align: center;
 
         h1 {
             text-transform: uppercase;
@@ -48,6 +49,7 @@
         }
     }
 }
+
 #nav-down {
     .top-menu {
         a {
@@ -63,18 +65,285 @@
     src: url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 }
 
+#shop-responsive-header {
+
+    padding-top: 24px;
+    .bridey-sorting {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left:10px;
+
+        .filter-toggle {
+            width: 57px;
+            height: 21px;
+            text-align: center;
+            i{
+                color: #000;
+            }
+            span{
+                margin-left: 6px;
+            }
+        }
+
+        .form-select {
+            width: 205px;
+            color: gray;
+
+            &:focus {
+                box-shadow: none;
+                border-color: rgba(128, 128, 128, 0.2117647059);
+            }
+        }
+    
+    }
+}
+
 .container-shop {
     width: 94% !important;
 }
 
+.products-variants-responsive {
+    height: 100vh;
+    top: 0;
+    position: absolute;
+    z-index: 5;
+    transform: translateX(-239px);
+    transition: .4s;
+    position: fixed;
+    padding-top: 10px;
+    background: #fff;
+    overflow: scroll;
+
+    h5 {
+        text-transform: uppercase;
+        color: #000;
+        font-size: 17px;
+        line-height: 1.8em;
+        letter-spacing: 2px;
+        font-weight: 400;
+        font-family: Lora, serif;
+        border-bottom: 1px dashed #bbb;
+        margin-left: 17px;
+        width: 209px;
+    }
+
+    .dresses-variants {
+        h5 {
+
+            font-size: 16px;
+
+        }
+
+        ul {
+            padding-top: 14px !important;
+            list-style: none;
+            padding: 0;
+
+            li {
+                margin-bottom: -17px;
+
+                .all-dress {
+                    font-size: 22px;
+                    position: relative;
+                    left: 12px;
+                }
+
+                a {
+                    .siluet {
+                        display: inline;
+
+                        img {
+                            height: 47px;
+                            width: 51px;
+                            position: relative;
+                            bottom: 11px;
+                        }
+                    }
+
+                    span {
+                        border-bottom: 1px dashed #bbb;
+                        font-weight: 500;
+                        font-size: 17px;
+                        letter-spacing: 1px;
+                        padding-right: 20%;
+                        padding-bottom: 2px;
+                        position: relative;
+                        display: block;
+                        position: relative;
+                        left: 66px;
+                        bottom: 41px;
+                        width: 65%;
+                        font-size: 14px;
+                    }
+
+                    .suit-dress {
+                        position: relative;
+                        left: 10px;
+                    }
+
+                    .siluet-sm {
+                        margin-left: 2%;
+
+                        img {
+                            width: 48px;
+                            height: 48px;
+                        }
+                    }
+
+
+                }
+
+            }
+        }
+    }
+
+    .product-area {
+        h3 {
+            text-transform: uppercase;
+            color: #000;
+            font-size: 17px;
+            line-height: 1.8em;
+            letter-spacing: 2px;
+            font-weight: 400;
+            font-family: Lora, serif;
+            border-bottom: 1px dashed #bbb;
+            margin-left: 17px;
+            width: 209px;
+        }
+
+        p {
+            font-size: 14px;
+        }
+
+
+        .price-filter {
+
+            .card {
+                border: none;
+                padding: 0 20px 20px 20px;
+            }
+
+            h4 {
+                color: #000;
+                margin-bottom: 20px;
+                text-align: center;
+                font-weight: 600;
+            }
+
+            .price-content {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 10px;
+
+                .filter-button {
+                    position: relative;
+                    bottom: 10px;
+
+                    button {
+                        border: none;
+                        font-size: 12px;
+                        color: #e9ac98;
+                        background: none;
+                    }
+
+                }
+            }
+
+            label {
+                font-size: 12px;
+                font-weight: 500;
+            }
+
+            p {
+
+                font-weight: 600;
+            }
+
+            .range-slider {
+                position: relative;
+                margin: 15px 0 30px 0;
+
+            }
+
+            input[type=range] {
+                width: 100%;
+                background: transparent;
+                position: absolute;
+                left: 0;
+            }
+
+            input[type=range]::-webkit-slider-thumb {
+                height: 15px;
+                width: 15px;
+                border-radius: 50%;
+                background: #36b37e;
+
+                cursor: pointer;
+                margin-top: -5px;
+                position: relative;
+                z-index: 1;
+            }
+
+
+            input[type=range]::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 5px;
+                background: #e9ac98;
+                border-radius: 3px;
+                border: none;
+            }
+        }
+    }
+
+    .widget-title-holder {
+        h5{
+            font-size: 16px;
+        }
+        ul {
+            padding: 0;
+            list-style: none;
+            margin-left: 16px;
+
+            li {
+                color: #717171;
+                font-family: "Open Sans", sans-serif;
+                font-weight: 300;
+                font-size: 16px;
+                padding-bottom: 6px;
+
+                a {
+                    padding-right: 5px;
+                    font-family: 'Open Sans', sans-serif;
+                }
+
+                &:hover {
+                    color: #ce56a1;
+                }
+            }
+        }
+    }
+    .close{
+        span{
+            position: relative;
+            left: 77%;
+            top: 1%;
+            color: #000;
+        }
+    }
+
+}
+
 #sort-area {
+    padding-top: 37px;
     .sort-result {
-        
+
         p {
             color: #000;
             font-weight: 400;
             display: inline;
-           
+
         }
 
     }
@@ -89,7 +358,6 @@
         text-transform: uppercase;
         width: 919px;
         position: relative;
-        top: 57px;
         left: 29%;
     }
 
@@ -99,10 +367,7 @@
         width: 205px;
 
 
-        &:focus {
-            box-shadow: none;
-            border-color: rgba(128, 128, 128, 0.2117647059);
-        }
+
 
 
     }
@@ -114,7 +379,7 @@ hr {
 
 
 #wpb_wrapper {
-    margin-top: 71px;
+    margin-top: 16px;
 
 
     .product-area {
@@ -431,7 +696,46 @@ hr {
             font-family: auto;
         }
     }
+    .load-more{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .btn-more {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            gap: 17px;
+            border-radius: 5px;
+            color: #58525e;
+            font-family: Roboto, Helvetica Neue, sans-serif;
+            text-decoration: none;
+            border: 1px solid #b8b8b8;
+            padding: 11px 19px 11px 12px;
+            font-size: 14px;
+            display: block;
+            background: linear-gradient(to right, #e9ac98 50%, #fff2f2 50%);
+            background-size: 200% 100%;
+            background-position: right bottom;
+            transition: all .2s ease-out;
 
+            &:hover {
+
+                background-position: left bottom;
+                border: none;
+                padding: 13px 30px 13px 12px;
+                padding-left: 3%;
+
+                i {
+                    position: absolute;
+                    left: 18%;
+                    top: 15px;
+                    transition: all .2s ease-out;
+
+                }
+
+            }
+        }
+    }
     .product-name {
         text-align: center;
 
@@ -465,6 +769,37 @@ hr {
 
 
 }
+#footer-top-shop {
+    border: 1px solid #EDEDED;
+    background-color: white;
+    padding-top: 6%;
+    padding-bottom: 6%;
+
+    .service-item {
+        text-align: center;
+
+        img {
+            display: block;
+            margin: auto;
+            padding-bottom: 20px;
+        }
+
+        .title {
+            color: #000;
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 700;
+        }
+
+        p {
+            margin-top: 1%;
+            font-size: 14px;
+            color: #4b5955;
+        }
+
+    }
+}
+
 @font-face {
     font-family: Marcellus;
     src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
